// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:input-formula button 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__JsonField __AMIS_COMPONENT_CLASS_PREFIX__Form--debug"
                >
                  <div
                    class="w-json-view-container w-rjv  w-rjv-inner"
                    style="line-height: 1.4; font-family: var(--w-rjv-font-family, Menlo, monospace); font-size: 13px; --w-rjv-font-family: monospace; --w-rjv-color: #002b36; --w-rjv-background-color: #ffffff; --w-rjv-line-color: #ebebeb; --w-rjv-arrow-color: var(--w-rjv-color); --w-rjv-edit-color: var(--w-rjv-color); --w-rjv-info-color: #0000004d; --w-rjv-update-color: #ebcb8b; --w-rjv-copied-color: #002b36; --w-rjv-copied-success-color: #28a745; --w-rjv-curlybraces-color: #236a7c; --w-rjv-colon-color: #002b36; --w-rjv-brackets-color: #236a7c; --w-rjv-type-string-color: #cb4b16; --w-rjv-type-int-color: #268bd2; --w-rjv-type-float-color: #859900; --w-rjv-type-bigint-color: #268bd2; --w-rjv-type-boolean-color: #2aa198; --w-rjv-type-date-color: #586e75; --w-rjv-type-url-color: #0969da; --w-rjv-type-null-color: #d33682; --w-rjv-type-nan-color: #859900; --w-rjv-type-undefined-color: #586e75;"
                  >
                    <div
                      style="display: inline-flex; align-items: center;"
                    >
                      <svg
                        class="w-rjv-arrow"
                        data-expand="true"
                        data-icon-style="square"
                        fill="none"
                        style="cursor: pointer; height: 1em; width: 1em; transform: rotate(0deg); transition: all 0.3s;"
                        viewBox="0 0 24 24"
                      >
                        <rect
                          fill="none"
                          height="14"
                          rx="1.5"
                          stroke="currentColor"
                          stroke-width="1.8"
                          width="14"
                          x="5"
                          y="5"
                        />
                        <path
                          d="M8 12h8"
                          fill="none"
                          stroke="currentColor"
                          stroke-width="1.8"
                        />
                      </svg>
                      <span
                        class="w-rjv-curlybraces-start "
                      >
                        {
                      </span>
                      <span
                        class="w-rjv-object-size"
                        style="padding-left: 4px; font-style: italic;"
                      >
                        1

                        item
                      </span>
                    </div>
                    <div
                      class="w-rjv-content"
                      style="margin-left: 6px;"
                    >
                      <div
                        class="w-rjv-line"
                        style="padding-left: 15px;"
                      >
                        <span>
                          <span
                            class="w-rjv-object-key"
                            data-keys="_r_2_"
                          >
                            "formula"
                          </span>
                          <span
                            class="w-rjv-colon"
                            style="padding-right: 3px;"
                          >
                            :
                          </span>
                          <span
                            class="w-rjv-value"
                            style="cursor: pointer;"
                          >
                            "SUM(1 + 2)"
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      style="padding-left: 2px;"
                    >
                      <span
                        class="w-rjv-curlybraces-end "
                        style="padding-left: 2px; display: inline-block;"
                      >
                        }
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="formula"
                  data-role="form-item"
                >
                  <label
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          公式
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__FormulaPicker __AMIS_COMPONENT_CLASS_PREFIX__FormulaPicker--text __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <button
                      class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default is-active __AMIS_COMPONENT_CLASS_PREFIX__FormulaPicker-action w-full"
                      type="button"
                    >
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__FormulaPicker-label"
                      >
                        公式编辑
                      </span>
                    </button>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:input-formula input-group 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__JsonField __AMIS_COMPONENT_CLASS_PREFIX__Form--debug"
                >
                  <div
                    class="w-json-view-container w-rjv  w-rjv-inner"
                    style="line-height: 1.4; font-family: var(--w-rjv-font-family, Menlo, monospace); font-size: 13px; --w-rjv-font-family: monospace; --w-rjv-color: #002b36; --w-rjv-background-color: #ffffff; --w-rjv-line-color: #ebebeb; --w-rjv-arrow-color: var(--w-rjv-color); --w-rjv-edit-color: var(--w-rjv-color); --w-rjv-info-color: #0000004d; --w-rjv-update-color: #ebcb8b; --w-rjv-copied-color: #002b36; --w-rjv-copied-success-color: #28a745; --w-rjv-curlybraces-color: #236a7c; --w-rjv-colon-color: #002b36; --w-rjv-brackets-color: #236a7c; --w-rjv-type-string-color: #cb4b16; --w-rjv-type-int-color: #268bd2; --w-rjv-type-float-color: #859900; --w-rjv-type-bigint-color: #268bd2; --w-rjv-type-boolean-color: #2aa198; --w-rjv-type-date-color: #586e75; --w-rjv-type-url-color: #0969da; --w-rjv-type-null-color: #d33682; --w-rjv-type-nan-color: #859900; --w-rjv-type-undefined-color: #586e75;"
                  >
                    <div
                      style="display: inline-flex; align-items: center;"
                    >
                      <svg
                        class="w-rjv-arrow"
                        data-expand="true"
                        data-icon-style="square"
                        fill="none"
                        style="cursor: pointer; height: 1em; width: 1em; transform: rotate(0deg); transition: all 0.3s;"
                        viewBox="0 0 24 24"
                      >
                        <rect
                          fill="none"
                          height="14"
                          rx="1.5"
                          stroke="currentColor"
                          stroke-width="1.8"
                          width="14"
                          x="5"
                          y="5"
                        />
                        <path
                          d="M8 12h8"
                          fill="none"
                          stroke="currentColor"
                          stroke-width="1.8"
                        />
                      </svg>
                      <span
                        class="w-rjv-curlybraces-start "
                      >
                        {
                      </span>
                      <span
                        class="w-rjv-object-size"
                        style="padding-left: 4px; font-style: italic;"
                      >
                        1

                        item
                      </span>
                    </div>
                    <div
                      class="w-rjv-content"
                      style="margin-left: 6px;"
                    >
                      <div
                        class="w-rjv-line"
                        style="padding-left: 15px;"
                      >
                        <span>
                          <span
                            class="w-rjv-object-key"
                            data-keys="_r_4_"
                          >
                            "formula"
                          </span>
                          <span
                            class="w-rjv-colon"
                            style="padding-right: 3px;"
                          >
                            :
                          </span>
                          <span
                            class="w-rjv-value"
                            style="cursor: pointer;"
                          >
                            "SUM(1 + 2)"
                          </span>
                        </span>
                      </div>
                    </div>
                    <div
                      style="padding-left: 2px;"
                    >
                      <span
                        class="w-rjv-curlybraces-end "
                        style="padding-left: 2px; display: inline-block;"
                      >
                        }
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="formula"
                  data-role="form-item"
                >
                  <label
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          公式
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__AMIS_COMPONENT_CLASS_PREFIX__FormulaPicker is-input-group __AMIS_COMPONENT_CLASS_PREFIX__FormulaPicker--text __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__AMIS_COMPONENT_CLASS_PREFIX__InputBox __AMIS_COMPONENT_CLASS_PREFIX__FormulaPicker-input __AMIS_COMPONENT_CLASS_PREFIX__InputBox--borderFull"
                    >
                      <div
                        class="__AMIS_COMPONENT_CLASS_PREFIX__FormulaCodeEditor __AMIS_COMPONENT_CLASS_PREFIX__FormulaCodeEditor--singleLine"
                      >
                        <div
                          class="CodeMirror cm-s-idea"
                          translate="no"
                        >
                          <div
                            style="overflow: hidden; position: relative; width: 3px; height: 0px;"
                          >
                            <textarea
                              autocapitalize="off"
                              autocorrect="off"
                              spellcheck="false"
                              style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; min-height: 1em; outline: none;"
                              tabindex="0"
                            />
                          </div>
                          <div
                            class="CodeMirror-scrollbar-filler"
                            cm-not-content="true"
                          />
                          <div
                            class="CodeMirror-gutter-filler"
                            cm-not-content="true"
                          />
                          <div
                            class="CodeMirror-scroll"
                            tabindex="-1"
                          >
                            <div
                              class="CodeMirror-sizer"
                              style="margin-left: 0px; min-width: 3px;"
                            >
                              <div
                                style="position: relative;"
                              >
                                <div
                                  class="CodeMirror-lines"
                                  role="presentation"
                                >
                                  <div
                                    role="presentation"
                                    style="position: relative; outline: none;"
                                  >
                                    <div
                                      class="CodeMirror-measure"
                                    />
                                    <div
                                      class="CodeMirror-measure"
                                    >
                                      <pre
                                        class="CodeMirror-line"
                                        role="presentation"
                                      >
                                        <span
                                          role="presentation"
                                          style="padding-right: .1px;"
                                        >
                                          SUM(1 + 2)
                                        </span>
                                      </pre>
                                    </div>
                                    <div
                                      style="position: relative; z-index: 1;"
                                    />
                                    <div
                                      class="CodeMirror-cursors"
                                    />
                                    <div
                                      class="CodeMirror-code"
                                      role="presentation"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              style="position: absolute; height: 50px; width: 1px;"
                            />
                            <div
                              class="CodeMirror-gutters"
                              style="display: none;"
                            />
                          </div>
                        </div>
                      </div>
                      <a
                        class="__AMIS_COMPONENT_CLASS_PREFIX__InputBox-clear"
                      >
                        <icon-mock
                          class="icon icon-input-clear"
                          icon="input-clear"
                        />
                      </a>
                    </div>
                    <a
                      class="__AMIS_COMPONENT_CLASS_PREFIX__FormulaPicker-toggler"
                    >
                      <icon-mock
                        class="icon icon-function"
                        icon="function"
                      />
                    </a>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
